--- a/.gitignore
+++ b/.gitignore
@@ -233,6 +233,15 @@ pyrightconfig.json
 pyvenv.cfg
 pip-selfcheck.json
 
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
