--- a/.gitignore
+++ b/.gitignore
@@ -233,15 +233,6 @@ pyrightconfig.json
 pyvenv.cfg
 pip-selfcheck.json
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -267,5 +258,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+/csvs
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,python,venv
