--- a/.gitignore
+++ b/.gitignore
@@ -260,5 +260,6 @@ $RECYCLE.BIN/
 *.lnk
 
 /csvs
+*.sqlite
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,python,venv
